<resources>
    <string name="app_name">Reiki Exercises</string>
    <string name="_5_dias_de_inicia_ao">Initiation</string>
    <string name="_7_dias_de_caminho">The Path</string>
    <string name="_5_dias_de_aten_ao_plena">Attention</string>
    <string name="o_caminho_interior">Inner Path</string>
    <string name="eleva_ao_de_consciencia">Consciousness</string>
    <string name="infocincodiasiniciacao">JUST FOR TODAY \n \n Before you start the five days, there is a phrase that deserves attention and reflection. In the precepts, Master Usui says «Just for today». This just for today does not mean that you will just do it on this day and forget about the next. Just for today means the practice of mindfulness - just for today, here and now, in mind and heart. When you start each of these days try to stay in the present moment, savoring each lesson, what you feel, what you think, and you will see that it makes all the difference. \n \n \n HOW TO PERFORM THE FIVE DAYS \n \n It is very simple: try to collect yourself in a quiet space, if you want, put on some serene music, sit down or lie down comfortably, preferably with your back straight. At the beginning of each day you have a poem by Emperor Meiji, which can help you to reflect. Meditate a little on what the beginning of the day tells you and what you would like to see transformed in you. How do you think Reiki can help you achieve that goal? \n \n Also pay attention to your nutrition and hydration. Over these five days, try to eat a more balanced diet. Don\'t overeat red meats, sugar, alcohol and stimulants like coffee, green tea and tobacco. However, you must not leave something that can create anxiety. A balanced diet will only serve to prepare your body for attunement. The less toxins you have, the better. However, nothing impedes your course. Hydration is also very important, even to help the body get rid of toxins. If you can, drink 1.5 l of water a day, unless you feel bad about drinking so much. Taking care with food and hydration, you will have a more harmonized body and a higher energy frequency.</string>
    <string name="cincodiasparacomecarreikititulo">FIVE DAYS TO START PRACTICING REIKI</string>
    <string name="dia_1_s_por_hoje_sou_calmo">DAY 1 - JUST FOR TODAY, I\'M CALM</string>
    <string name="dia_2_s_por_hoje_confio">DAY 2 - JUST FOR TODAY, I TRUST</string>
    <string name="dia_3_s_por_hoje_sou_grato">DAY 3 - JUST FOR TODAY, I AM GRATEFUL</string>
    <string name="dia_4_s_por_hoje_trabalho_honestamente">DAY 4 - JUST FOR TODAY, I WORK HONESTLY</string>
    <string name="dia_5_s_por_hoje_sou_bondoso">DAY 5 - JUST FOR TODAY, I\'M KINDNESS</string>
    <string name="a_gua_que_pena_apesar_de_a_fonte_ser_pura_e_clara_a_gua_torna_se_suja_quando_flui_por_um_riacho_polufdo_imperador_meiji">«The water - What a pity, even though the source is pure and clear, the water becomes dirty when it flows through a polluted stream.» \n - Emperor Meiji</string>
    <string name="reflex_o">REFLECTION</string>
    <string name="como_s_perante_a_vida_e_perante_os_desafios_que_te_surgem_n_n_como_queres_ou_achas_que_o_reiki_pode_ajudar_te_com_as_tuas_quest_es">-> How are you before life and facing the challenges that arise? \n \n-> How do you want or do you think Reiki can help you with your questions?</string>
    <string name="escreve_a_observa_ao">Write an observation</string>
    <string name="o_que_podes_fazer">WHAT YOU CAN DO</string>
    <string name="observa_que_situa_es_que_te_fazem_perder_a_calma_consegues_perceber_que_rea_es_tem_o_teu_corpo_quando_perdes_a_calma_ou_quando_v_s_algu_m_a_perder_a_calma">Observe situations that make you lose your mood. Can you understand what reactions your body has when you lose your mood or when you see someone losing their mood?</string>
    <string name="gravar">Save</string>
    <string name="image">image</string>
    <string name="cincodias_iniciacao">5 Days to start Reiki</string>
    <string name="setedias_caminho">7 Days of Path</string>
    <string name="cincodias_atencaoplena">5 Days of Full Attention</string>
    <string name="vinteumdias_caminhointerior">The Inner Path in 21 Days</string>
    <string name="cincodias_elevacaoconsciencia">5 Days to raise awareness</string>
    <string name="reminisc_ncia_liderando_o_pais_para_que_seja_visto_como_bom_fa_o_o_meu_melhor_usando_as_minhas_faculdades_ao_m_ximo_n_imperador_meiji">«Reminiscence - Leading the country to be seen as good, I do my best using my faculties to the fullest.» \n- Emperor Meiji</string>
    <string name="tens_confian_a_em_t_mesmo_consegues_confiar_nos_outros_n_n_achas_que_consegues_dar_o_teu_melhor_e_sentes_te_reconhecido_por_isso_ou_sentes_necessidade_de_ser_reconhecido_por_isso"><![CDATA[-> Do you have confidence in yourself? Can you trust others? \n \n-> Do you think you can do your best and feel recognized for that, or do you feel the need to be recognized for that?]]></string>
    <string name="o_que_achas_que_a_vida_tem_reservado_para_ti_sentes_te_confiante_do_teu_papel_na_vida_e_do_que_podes_fazer_por_ti_mesmo_e_pelos_outros">What do you think life has in store for you? Do you feel confident about your role in life and what you can do for yourself and for others?</string>
    <string name="jornal_tanta_gente_l_o_jornal_por_conseguinte_dever_se_ia_escrever_sobre_o_que_significativo_em_vez_do_mundano_n_imperador_meiji">«Newspaper - So many people read the newspaper, therefore one should write about what is significant, instead of the mundane.» \n-Emperor Meiji</string>
    <string name="a_gratid_o_significativa_para_ti_de_que_maneira_a_expressas_n_n_o_que_achas_que_preciso_para_haver_mais_gratid_o_no_mundo"><![CDATA[-> Is gratitude meaningful to you? How do you express it? \n\n-> What do you think it takes to have more gratitude in the world?]]></string>
    <string name="a_gratid_o_traz_nos_uma_liberdade_incr_vel_e_uma_grande_capacidade_de_desapego_e_de_entendimento_sobre_as_coisas_hoje_tenta_fazer_o_seguinte_exerc_cio_n_agradece_algo_de_bom_que_te_tenha_acontecido_n_agradece_algo_de_mau_que_te_tenha_acontecido_n_como_te_sentiste">Gratitude brings us incredible freedom and a great capacity for detachment and understanding about things. Today, try to do the following exercise: \n* Appreciate something good that happened to you; \n* Appreciate something bad that happened to you. \nHow did you feel?</string>
    <string name="pr_tica_a_menos_que_o_teu_trabalho_aponte_para_o_bem_estar_geral_muito_dif_cil_conduzir_os_povos_neste_mundo_n_imperador_meiji">«Practice - Unless your work is aimed at general well-being, it is very difficult to lead people in this world.» \n-Emperor Meiji</string>
    <string name="a_honestidade_importante_para_ti_n_n_s_honesto_contigo_mesmo"><![CDATA[-> Is honesty important to you? \n\n-> Are you honest with yourself?]]></string>
    <string name="como_costumas_encarar_a_honestidade_achas_que_algo_importante_os_outros_terem_contigo_e_tu_com_eles_ndesenvolves_essa_honestidade_contigo_mesmo_nhoje_experimenta_falar_contigo_mesmo_primeiro_coisas_simples_como_uma_conversa_de_amigos_ndepois_experimenta_falar_contigo_sobre_as_coisas_que_te_preocupam_n_como_te_sentes_nessa_intimidade_contigo_mesmo">How do you usually view honesty? Do you think it is important for others to have you and you with them? \nDo you develop that honesty with yourself? \nToday, try talking to yourself. First simple things, like a conversation with friends; \nThen try talking to you about the things that worry you. \n How do you feel in that intimacy with yourself?</string>
    <string name="como_esperas_que_os_outros_sejam_bondosos_para_ti_n_nde_que_forma_achas_que_o_reiki_te_ajudar_com_a_bondade">How do you expect others to be kind to you? \n\nHow do you think Reiki will help you with kindness?</string>
    <string name="neste_dia_observa_te_na_qualidade_de_pessoa_bondosa_como_recebes_os_gestos_dos_outros_mesmo_que_n_o_sejam_bondosos_e_como_tu_s_bondoso_para_com_os_outr_s_nexperimenta_observar_o_que_te_rodeia_quando_est_s_a_caminho_do_trabalho_ou_de_casa_de_que_forma_te_faz_sentido_a_vida_e_o_espa_o_que_ela_ocupa_em_ti">On this day, observe yourself as a kind person. How you receive the gestures of others, even if they are not kind, and how kind you are to others. \nTry to observe what surrounds you when you are on the way to work or home, in what way life and life make sense to you. space that it occupies in you.</string>
    <string name="muitoobrigadoporcuidaresdeti">THANK YOU SO MUCH BY CARING FOR YOU</string>
    <string name="muitoobrigadopelos5dias">Thank you very much for your five-day process. I hope it was very positive for you and aroused your taste for transformation. With a Level 1 course, you will see how you can make this transformation consistently. \n \nMaster Usui used to say that Reiki is the secret art of inviting happiness with good reason. Reiki calls for work, constancy and above all experience. This is what helps us to be happy and to do better and better. \nThese five days were just an introduction to the reflection and goals you may want to achieve with your Reiki practice. When you start to work with energy, you will also be able to work on the issues you observed. \nDon\'t be in a hurry, it\'s like building a house: \n \nTake the time and, the more love you take each step, the more solid your construction, without limits, it will remain. \n \nJust for today, I am grateful.</string>
    <string name="dia_1_muladhara">Day 1 - MULADHARA</string>
    <string name="dia_2_svadhisthana">Day 2 - SVADHISTHANA</string>
    <string name="dia_3_manipura">Day 3 – MANIPURA</string>
    <string name="dia_4_anahata">Day 4 - ANAHATA</string>
    <string name="dia_5_vishuddha">Day 5 - VISHUDDHA</string>
    <string name="dia_6_ajna">Day 6 - AJNA</string>
    <string name="dia_7_sahasrara">Day 7 - SAHASRARA</string>
    <string name="informa_ao">Info</string>
    <string name="exerc_cios">EXERCISES</string>
    <string name="quando_pensamos_nos_outros_como_seres_humanos_que_sofrem_como_n_s_que_amam_como_n_s_que_t_m_expetativas_e_desejos_como_n_s_trazemos_consci_ncia_a_pergunta_vale_a_pena_neste_vale_a_pena_toca_nos_nas_a_es_que_tomamos_impensadamente_e_isso_est_muito_relacionado_com_o_quarto_princ_pio_a_honestidade_sendo_verdadeiro_vale_a_pena_qualquer_tipo_de_guerra_n_n121_a_forma_correta_de_pensar_natrav_s_do_oceano_ne_em_todos_as_dire_es_neu_penso_em_todos_os_povos_como_irm_os_nqual_o_motivo_da_guem_neste_mundo">When we think of others as human beings, who suffer like us, who love like us, who have expectations and desires like us, we raise the question: is it worth it?\nThis is worth touching on the actions we take thoughtlessly and this is very much related to the fourth principle: honesty. Being true, is any war worth it?\n\n121 - The right way of thinking\nAcross the ocean\nAnd in all directions,\nI think of all people as brothers.\nWhat is the reason for guem in this world?</string>
    <string name="o_exerc_cio_dc_hoje_simples_observar_n_n_vai_para_um_local_onde_gostes_de_estar_nestas_tuas_f_rias_e_observa_as_pessoas_mas_sem_as_julgares_observa_como_s_o_t_o_parecidas_contigo_e_vai_ihes_enviando_reiki_para_que_os_seus_desejos_pelo_bem_supremo_sejam_concretizados_como_te_sentes_depois_destes_exerc_cios_n_nfaz_novamente_a_medita_o_gassho_e_agradece_tem_um_dia_feliz">The exercise of dc today is simple, it is to observe.\n\n* Go to a place where you like to be, on your vacation, and observe people, but without judging them. Observe how they are so similar to you and send them Reiki, so that their wishes, for the supreme good, are fulfilled. How do you feel after these exercises?\n\nDo the Gassho meditation again and give thanks. Have a happy day.</string>
</resources>