<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.iniciacao.IniciacaoDia2Activity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">
    <TextView
        android:id="@+id/txt_iniciacao_dia2_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia_2_s_por_hoje_confio"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_iniciacao_dia2_poema"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/reminisc_ncia_liderando_o_pais_para_que_seja_visto_como_bom_fa_o_o_meu_melhor_usando_as_minhas_faculdades_ao_m_ximo_n_imperador_meiji"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia2_titulo" />

    <TextView
        android:id="@+id/txt_iniciacao_dia2_reflexao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/reflex_o"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia2_poema" />

    <TextView
        android:id="@+id/txt_iniciacao_dia2_perguntas1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/tens_confian_a_em_t_mesmo_consegues_confiar_nos_outros_n_n_achas_que_consegues_dar_o_teu_melhor_e_sentes_te_reconhecido_por_isso_ou_sentes_necessidade_de_ser_reconhecido_por_isso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia2_reflexao" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_iniciacao_dia2_resposta_pergunta1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/escreve_a_observa_ao"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia2_perguntas1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_iniciacao_dia2_resposta_pergunta1_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_iniciacao_dia2_oquepodesfazer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/o_que_podes_fazer"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_iniciacao_dia2_resposta_pergunta1" />

    <TextView
        android:id="@+id/txt_iniciacao_dia2_perguntas2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/o_que_achas_que_a_vida_tem_reservado_para_ti_sentes_te_confiante_do_teu_papel_na_vida_e_do_que_podes_fazer_por_ti_mesmo_e_pelos_outros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia2_oquepodesfazer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_iniciacao_dia2_resposta_pergunta2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/escreve_a_observa_ao"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia2_perguntas2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_iniciacao_dia2_resposta_pergunta2_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_fechar_iniciacao_dia2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_iniciacao_dia2_resposta_pergunta2"
        app:srcCompat="@drawable/yoga"
        android:contentDescription="@string/image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fechar_iniciacao_dia2"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/gravar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>