<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.iniciacao.IniciacaoDia3Activity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">
    <TextView
        android:id="@+id/txt_iniciacao_dia3_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia_3_s_por_hoje_sou_grato"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_iniciacao_dia3_poema"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/jornal_tanta_gente_l_o_jornal_por_conseguinte_dever_se_ia_escrever_sobre_o_que_significativo_em_vez_do_mundano_n_imperador_meiji"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia3_titulo" />

    <TextView
        android:id="@+id/txt_iniciacao_dia3_reflexao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/reflex_o"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia3_poema" />

    <TextView
        android:id="@+id/txt_iniciacao_dia3_perguntas1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/a_gratid_o_significativa_para_ti_de_que_maneira_a_expressas_n_n_o_que_achas_que_preciso_para_haver_mais_gratid_o_no_mundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia3_reflexao" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_iniciacao_dia3_resposta_pergunta1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/escreve_a_observa_ao"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia3_perguntas1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_iniciacao_dia3_resposta_pergunta1_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_iniciacao_dia3_oquepodesfazer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/o_que_podes_fazer"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_iniciacao_dia3_resposta_pergunta1" />

    <TextView
        android:id="@+id/txt_iniciacao_dia3_perguntas2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/a_gratid_o_traz_nos_uma_liberdade_incr_vel_e_uma_grande_capacidade_de_desapego_e_de_entendimento_sobre_as_coisas_hoje_tenta_fazer_o_seguinte_exerc_cio_n_agradece_algo_de_bom_que_te_tenha_acontecido_n_agradece_algo_de_mau_que_te_tenha_acontecido_n_como_te_sentiste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia3_oquepodesfazer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_iniciacao_dia3_resposta_pergunta2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/escreve_a_observa_ao"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_iniciacao_dia3_perguntas2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_iniciacao_dia3_resposta_pergunta2_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_fechar_iniciacao_dia3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_iniciacao_dia3_resposta_pergunta2"
        app:srcCompat="@drawable/yoga"
        android:contentDescription="@string/image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fechar_iniciacao_dia3"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/gravar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>